--- a/TimelyFrontend/src/app/components/body/body.component.html
+++ b/TimelyFrontend/src/app/components/body/body.component.html
@@ -23,10 +23,16 @@
                      [duration]="calculateDuration(log.startDateTime, log.endDateTime)"></app-log-entry>
     </div>
   </div>
+  <div class="pagination-container">
+    <a href="javascript:void(0);"
+       *ngFor="let item of [].constructor(totalNumberOfPages); let i = index"
+       (click)="fetchPage(i)"
+       class="pagination"
+       [ngClass]="{'pagination-disable-anchor': currentPageNumber===i}"> {{i+1}}</a>
+  </div>
   <div class="body-actions">
     <app-button text="Delete all logs" (onBtnClick)="deleteAllLogs()"></app-button>
     <a href="https://localhost:4200/api/Excel"><button class="btn">Export to Excel</button></a>
   </div>
-
 </div>
 
