Fix export excel API link

--- a/TimelyFrontend/src/app/components/body/body.component.html
+++ b/TimelyFrontend/src/app/components/body/body.component.html
@@ -32,7 +32,7 @@
   </div>
   <div class="body-actions">
     <app-button text="Delete all logs" (onBtnClick)="deleteAllLogs()"></app-button>
-    <a href="https://localhost:4200/api/Excel"><button class="btn">Export to Excel</button></a>
+    <a href="https://timely-backend.azurewebsites.net/api/Excel"><button class="btn">Export to Excel</button></a>
   </div>
 </div>
 
